# ox-content

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml  publish.yml  release.yml
assets/: README.md
benchmarks/bundle-size/: build-time-benchmark.mjs  measure.mjs  package.json  parse-benchmark-bun.mjs  parse-benchmark.mjs
benchmarks/bundle-size/content/: api.md  examples.md
crates/ox_content_allocator/src/: lib.rs
crates/ox_content_ast/src/: span.rs
crates/ox_content_docs/: Cargo.toml
crates/ox_content_docs/src/: extractor.rs  lib.rs
crates/ox_content_i18n/: Cargo.toml
crates/ox_content_i18n/src/: checker.rs  error.rs  key.rs  lib.rs  locale.rs
crates/ox_content_i18n/src/dictionary/: json.rs  mod.rs  yaml.rs
crates/ox_content_i18n/src/mf2/: ast.rs  lexer.rs  mod.rs  parser.rs  validator.rs
crates/ox_content_i18n_checker/: Cargo.toml
crates/ox_content_i18n_checker/src/: diagnostic.rs  key_collector.rs  lib.rs  md_key_collector.rs
crates/ox_content_i18n_cli/: Cargo.toml
crates/ox_content_i18n_cli/src/: main.rs
crates/ox_content_i18n_lsp/: Cargo.toml
crates/ox_content_i18n_lsp/src/: backend.rs  document.rs  main.rs  state.rs
crates/ox_content_lsp/: Cargo.toml
crates/ox_content_lsp/src/: backend.rs  config.rs  document.rs  frontmatter.rs  i18n.rs  main.rs  preview.rs  state.rs
crates/ox_content_lsp/src/backend/: commands.rs  diagnostics.rs  features.rs  handlers.rs  snippets.rs
crates/ox_content_lsp/src/frontmatter/: complete.rs  parse.rs  schema.rs  types.rs  utils.rs  validate.rs
crates/ox_content_lsp/src/i18n/: document.rs  state.rs
crates/ox_content_lsp/src/preview/: html.rs  render.rs  symbols.rs  text.rs
crates/ox_content_napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/ox_content_napi/benches/: mdast_transfer.rs
crates/ox_content_napi/src/: highlight.rs  lib.rs  lint.rs  mdast.rs  mdast_raw.rs  slides.rs  transfer.rs  transformer.rs
crates/ox_content_og_image/: Cargo.toml
crates/ox_content_og_image/src/: config.rs  generator.rs  template.rs
crates/ox_content_parser/benches/: parser.rs
crates/ox_content_parser/src/: lexer.rs  parser.rs
crates/ox_content_parser/tests/: edge_cases.rs
crates/ox_content_renderer/src/: html.rs  lib.rs
crates/ox_content_renderer/tests/: edge_cases.rs
crates/ox_content_search/: Cargo.toml
crates/ox_content_search/src/: index.rs  indexer.rs  lib.rs  query.rs  tokenizer.rs
crates/ox_content_slides/: Cargo.toml
crates/ox_content_slides/src/: lib.rs  models.rs  notes.rs  parser.rs  render.rs  theme.rs
crates/ox_content_slides/templates/: presenter.html  print.html  slide.html
crates/ox_content_ssg/: Cargo.toml
crates/ox_content_ssg/src/: entry.css  html.rs  lib.rs  ssg.css  ssg.js
crates/ox_content_ssg/src/plugins/: github.css  island.css  mermaid.css  ogp.css  tabs.css  youtube.css
crates/ox_content_ssg/templates/: entry.html  footer.html  mobile_social_links.html  nav.html  page.html  social_links.html
crates/ox_content_vite/src/: transform.rs
crates/ox_content_wasm/: Cargo.toml  README.md
crates/ox_content_wasm/src/: lib.rs
docs/: architecture.md  getting-started.md  index.html  index.md  ox-content-highlight-theme.ts  package.json  tsconfig.json  vite.config.ts
docs/content/: architecture.md  development-setup.md  getting-started.md  index.md  theming.md
docs/content/api/: browser.md  cache.md  dev-server.md  docs.json  docs.md  environment.md  github.md  highlight.md  i18n.md  index-module.md  index.md  jsx-runtime.md  jsx.d.md  lint-files.md  lint.md  mermaid-protect.md  mermaid.md  nav-generator.md  nav.ts  ogp.md  page-context.md  parse.md  renderer.md  (+9 more)
docs/examples/: ssg-vite.md
docs/src/: App.vue
editors/neovim/: README.md
editors/zed/: Cargo.toml  README.md  extension.toml
examples/: README.md
examples/gen-source-docs/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/integ-react/: index.html  package.json  tsconfig.json  vite.config.ts
examples/integ-svelte/: index.html  package.json  tsconfig.json  vite.config.ts
examples/integ-vue/: index.html  package.json  tsconfig.json  vite.config.ts
examples/og-image-custom/: index.html  og.svelte  og.ts  og.tsx  og.vue  package.json  vite.config.ts
examples/playground/: index.html  package.json  tsconfig.json  vite.config.ts
examples/plugin-markdown-it/: README.md  index.js  package.json
examples/plugin-rehype/: README.md  index.js  package.json
examples/slides-vite/: index.html  package.json  tsconfig.json  vite.config.ts
examples/ssg-vite/: index.html  package.json  tsconfig.json  vite.config.ts
examples/unplugin-esbuild/: build.js  package.json
examples/unplugin-rollup/: package.json  rollup.config.js  tsconfig.json
examples/unplugin-vite-markdown-it/: index.html  package.json  vite.config.ts
examples/unplugin-vite-ox-content/: README.md  index.html  package.json  vite.config.ts
examples/unplugin-vite-rehype/: index.html  package.json  vite.config.ts
examples/unplugin-vite-remark/: index.html  package.json  vite.config.ts
examples/unplugin-webpack/: package.json  webpack.config.js
npm/ox-content-islands/: package.json  tsconfig.json  vite.config.ts
npm/unplugin-ox-content/: package.json  tsdown.config.ts  vite.config.ts
npm/vite-plugin-ox-content/: package.json  playwright.config.ts  tsconfig.json  tsdown.config.ts  tsup.config.ts  vite.config.ts
npm/vite-plugin-ox-content-react/: package.json  tsconfig.json  tsdown.config.ts  vite.config.ts
npm/vite-plugin-ox-content-slides/: package.json  playwright.config.ts  vite.config.ts
npm/vite-plugin-ox-content-svelte/: package.json  tsdown.config.ts  vite.config.ts
npm/vite-plugin-ox-content-vue/: package.json  tsconfig.json  tsdown.config.ts  tsup.config.ts  vite.config.ts
npm/vscode-ox-content/: README.md  package.json  tsconfig.json
scripts/: build-wasm-package.ts  release.ts  tsconfig.json
(+214 files in other folders)
