[package]
name = "ox_content_i18n"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "i18n core library for Ox Content — MF2 parser, dictionary management, and static analysis"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
