[package]
name = "ox_content_napi"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js bindings for Ox Content"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_content_allocator = { workspace = true }
ox_content_ast = { workspace = true }
ox_content_parser = { workspace = true }
ox_content_renderer = { workspace = true }
ox_content_docs = { workspace = true }
ox_content_og_image = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
