[package]
name = "ox_content_napi"
version.workspace = true
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js bindings for Ox Content"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_content_allocator = { workspace = true }
ox_content_ast = { workspace = true }
ox_content_parser = { workspace = true }
ox_content_renderer = { workspace = true }
ox_content_docs = { workspace = true }
ox_content_og_image = { workspace = true }
ox_content_search = { workspace = true }
ox_content_ssg = { workspace = true }
ox_content_i18n = { workspace = true }
ox_content_i18n_checker = { workspace = true }
oxc_span = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
