[package]
name = "ox_content_og_image"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OG image generation for Ox Content"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bpaf = { version = "0.9.20", features = ["derive"], optional = true }

[features]
default = []
cli = ["dep:bpaf"]

[[bin]]
name = "ox_content_og_image"
path = "src/bin/main.rs"
required-features = ["cli"]
