[package]
name = "ox_content_search"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Full-text search engine for Ox Content"

[lints]
workspace = true

[dependencies]
ox_content_ast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
ox_content_allocator = { workspace = true }
ox_content_parser = { workspace = true }
