[package]
name = "ox_content_ssg"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Static Site Generation for Ox Content documentation"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
