[package]
name = "ox_content_wasm"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for Ox Content - Browser-ready Markdown parser"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ox_content_allocator = { workspace = true }
ox_content_ast = { workspace = true }
ox_content_parser = { workspace = true }
ox_content_renderer = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
